--- a/app/src/main/res/layout/row_citas.xml
+++ b/app/src/main/res/layout/row_citas.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
     android:background="@color/black"
     android:gravity="center">
@@ -23,7 +25,36 @@
             android:background="@color/black"
             android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="165dp"
+            android:layout_height="158dp"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="200dp"
+            app:cardElevation="20dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="150dp"
+                android:layout_height="135dp"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/reservaimg"
+                tools:srcCompat="@drawable/reservaimg" />
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/black"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -90,6 +121,11 @@
                 android:textAlignment="center"
                 android:textColor="@color/white" />
 
+
+        </LinearLayout>
+
+        </LinearLayout>
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/terminar_row_trabajadores"
                 android:textColor="@color/black"
@@ -100,9 +136,6 @@
                 android:fontFamily="@font/amiko_bold"
                 android:layout_gravity="center"
                 android:text="@string/terminar" />
-
-
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
