--- a/app/src/main/res/layout/row_reservas_admin.xml
+++ b/app/src/main/res/layout/row_reservas_admin.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
     android:background="@color/black"
     android:gravity="center">
-
     <androidx.cardview.widget.CardView
         android:id="@+id/reserva"
         android:layout_width="match_parent"
@@ -34,6 +33,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="165dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_height="158dp"
                     android:layout_marginTop="10dp"
                     app:cardCornerRadius="200dp"
@@ -67,7 +67,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/peluquero_row_clientes"
+                        android:id="@+id/telefono_cliente_reservas_admin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -79,7 +79,7 @@
                         android:textSize="14sp" />
 
                     <TextView
-                        android:id="@+id/servicios_row_clientes"
+                        android:id="@+id/identificacionpeluquero_reservas_admin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -90,7 +90,7 @@
                         android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/precio_row_clientes"
+                        android:id="@+id/detalleservicio_reservas_admin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -101,7 +101,7 @@
                         android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/estado_row_clientes"
+                        android:id="@+id/precioservicio_reservas_admin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -112,7 +112,29 @@
                         android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/fecha_row_clientes"
+                        android:id="@+id/pagoservicio_reservas_admin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5sp"
+                        android:fontFamily="sans-serif-light"
+                        android:text="@string/fecha"
+                        android:textAlignment="center"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:id="@+id/estado_reservas_admin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5sp"
+                        android:fontFamily="sans-serif-light"
+                        android:text="@string/fecha"
+                        android:textAlignment="center"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:id="@+id/fecha_reservas_admin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -126,18 +148,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/cancelar_row_clientes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/white"
-                android:fontFamily="@font/amiko_bold"
-                android:text="@string/cancelar"
-                android:textColor="@color/black"
-                app:cornerRadius="10dp" />
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
