--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_reservas">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.unipacifico.peluqueria.vistas.administrador.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_reservas"
+        android:name="com.unipacifico.peluqueria.vistas.administrador.reservas.Reservas_V_Administrador"
+        android:label="@string/reservas"
+        tools:layout="@layout/fragment_reservas__v__administrador" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.unipacifico.peluqueria.vistas.administrador.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
+        android:id="@+id/nav_empleados"
+        android:name="com.unipacifico.peluqueria.vistas.administrador.empleados.Empleados_V_Administrador"
+        android:label="@string/empleados"
+        tools:layout="@layout/fragment_empleados__v__administrador" />
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.unipacifico.peluqueria.vistas.administrador.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_clientes"
+        android:name="com.unipacifico.peluqueria.vistas.administrador.clientes.Clientes_V_Administrador"
+        android:label="@string/clien"
+        tools:layout="@layout/fragment_clientes__v__administrador" />
+
+
 </navigation>
